gccida/c2/ix86_emit_restore_regs_using_mov
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4775:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)( ( ( v4 & 0x2000000 | 0x500000000uLL) - 1) >> 32), i); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4776:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), pointer); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_emit_restore_regs_using_mov/src/i386.c:4777:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v7, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), offset, 1, 1); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_emit_restore_regs_using_mov/src/obj/i386.o] Error 1
